Crash when use viewer node to preview a quaternion attirbute[Geo nodes] #116598

Closed
opened 2023-12-28 09:51:01 +01:00 by yonghao lv · 5 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 4080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.42

Blender Version
Broken: version: 4.0.2, branch: blender-v4.0-release, commit date: 2023-12-05 07:41, hash: 9be62e85b727
Worked: (newest version of Blender that worked as expected)

Short description of error
Crash when use viewer node to preview a quaternion attirbute, but it can still work when not to preview it
crash report: camerhelper_.crash.txt

Exact steps for others to reproduce the error

  1. open the simple file
  2. preview this 2 socket and crash
    image

(3. if that doesnt crash already, go to the N-panel and change the Viewer Nodes data type to quaternion)

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 4080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.42 **Blender Version** Broken: version: 4.0.2, branch: blender-v4.0-release, commit date: 2023-12-05 07:41, hash: `9be62e85b727` Worked: (newest version of Blender that worked as expected) **Short description of error** Crash when use viewer node to preview a quaternion attirbute, but it can still work when not to preview it crash report: [camerhelper_.crash.txt](/attachments/190d5adf-4459-4c24-a21d-930fe77e748e) <video src="/attachments/3bfafe60-25d8-4419-af2a-185014f96a14" title="2023-12-28 16-39-29.mp4" controls></video> **Exact steps for others to reproduce the error** 1. open the simple file 2. preview this 2 socket and crash ![image](/attachments/40e24a14-60ae-45ab-802a-437e27051ef1) (3. if that doesnt crash already, go to the N-panel and change the `Viewer Nodes` data type to quaternion)
yonghao lv added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2023-12-28 09:51:01 +01:00
Iliya Katushenock added the
Interest
EEVEE & Viewport
label 2023-12-28 13:57:07 +01:00
Member

Dont get a crash in release/debug builds, just seeing this:

image

Dont get a crash in release/debug builds, just seeing this: ![image](/attachments/e74f8de8-03d5-4e46-a6a3-632bf470ef6d)
132 KiB

@lichtwerk Can you go to N-panel, and change data type of Viewer node?

@lichtwerk Can you go to `N-panel`, and change data type of Viewer node?
Member

@lichtwerk Can you go to N-panel, and change data type of Viewer node?

Yes, that triggers the crash for me (will add this to the repro steps)

> @lichtwerk Can you go to `N-panel`, and change data type of Viewer node? Yes, that triggers the crash for me (will add this to the repro steps)
Member

Will raise the priority here since it is a crasher that is not totally unlikely to run into (module can feel free to lower the priority again of course)

Will raise the priority here since it is a crasher that is not totally unlikely to run into (module can feel free to lower the priority again of course)
Philipp Oeser added
Priority
High
and removed
Priority
Normal
labels 2024-02-12 13:17:59 +01:00

@lichtwerk Hey! I decided to take a look into this and found that a conversion from ColorGeometry4f to Quaternion is being denied during attribute lookup. It's returning a nullptr, and there's no check for its return value which is what's causing the crash.

I'm likely not qualified to dig into the root cause of the issue, but a simple null check after the assignment fixes the problem. I can go ahead and make a pull request if you believe this is a good solution.

Also for reference, the error stems from line 496 in draw_cache_impl_curve.cc

@lichtwerk Hey! I decided to take a look into this and found that a conversion from ColorGeometry4f to Quaternion is being denied during attribute lookup. It's returning a nullptr, and there's no check for its return value which is what's causing the crash. I'm likely not qualified to dig into the root cause of the issue, but a simple null check after the assignment fixes the problem. I can go ahead and make a pull request if you believe this is a good solution. Also for reference, the error stems from line 496 in draw_cache_impl_curve.cc
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-02-27 20:30:16 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#116598
No description provided.